--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,192 @@
 body{
-	background-color: #ef7920;
+	background-color: #ffffff;
+	margin:0;
+	padding:0;
 }
+
+.header{
+	background-color: #000000;
+	height:60px;
+	color:#fff;
+	margin:0;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding:0 30px;
+}
+.header h1{
+	margin-right:30px;
+}
+.header a{
+	color:#ddd;
+	margin:0 10px;
+	text-decoration: none;
+}
+.header a:actived{
+	color:#fff;
+}
+
+div.panel{
+	margin:30px;
+	background-color: #eeeeee;
+	padding:20px;
+	box-sizing: border-box;
+	border-radius: 8px;
+}
+div.panel h2{
+    margin:0;
+    padding:0;
+}
+
+div.panel a{
+	display: inline-block;
+	font-size: 14px;
+	padding:4px 16px;
+	text-align: center;
+	background-color: #fff;
+	color:#262626;
+	border:1px solid #ddd;
+	text-decoration: none;
+	border-radius: 4px;
+}
+
+div.publish{
+	margin:30px;
+	background-color: #eeeeee;
+	padding:20px;
+	box-sizing: border-box;
+}
+
+div.publish textarea{
+	width:100%;
+	padding:10px;
+	min-height: 100px;
+	box-sizing: border-box;
+	line-height: 20px;
+	font-size: 14px;
+	color:#464646;
+}
+
+.btn{
+	width:80px;
+	height:30px;
+	text-align: center;
+	background-color: #fff;
+	color:#262626;
+	border:1px solid #ddd;
+}
+
+
+div.items{
+	margin:30px;
+}
+
+div.items ul{
+	list-style: none;
+	margin:0;
+	padding:0;
+	display: flex;
+	flex-direction: row;
+}
+
+div.items li{
+	width:300px;
+	margin-right:30px;
+	margin-bottom: 30px;
+}
+
+div.items li h3{
+	margin:0;
+	padding:0;
+	margin-bottom: 8px;
+}
+div.items li h3 a{
+	display: block;
+	height:20px;
+	line-height: 20px;
+	color:#464646;
+	font-size: 18px;
+	text-decoration: none;
+}
+
+div.items li span.time{
+	color:#999;
+	font-size:14px;
+	display: block;
+}
+
+div.items li p{
+	margin-top:10px;
+	color:#464646;
+	line-height: 20px;
+	font-size: 16px;
+}
+
+div.footer{
+	margin:30px;
+	padding-top: 16px;
+	border-top:1px solid #dddddd;
+}
+
+
+div.message{
+	background-color: #eeeeee;
+	margin:30px;
+	border-radius: 4px;
+}
+div.message .error{
+	display: block;
+	margin:20px;
+	font-size: 14px;
+	color:red;
+}
+div.message .info{
+	display: block;
+	margin:20px;
+	font-size: 14px;
+	color:green;
+}
+
+div.form-wrapper{
+	margin:30px;
+}
+
+div.form-wrapper h3{
+	margin:0;
+	padding:0;
+	font-size: 20px;
+	height:24px;
+	line-height: 24px;
+	color:#464646;
+	border-bottom:1px solid #aaa;
+}
+
+div.row{
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	margin: 20px;
+}
+
+div.row label{
+	width:100px;
+	text-align: right;
+	color:#464646;
+	font-size: 14px;
+	margin-right: 16px;
+}
+
+div.row input{
+	width:200px;
+	text-indent: 4px;
+	border:1px solid #999;
+	height:30px;
+	line-height: 30px;
+}
+
+div.actions{
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-end;
+}
+
