--- a/views/index.html
+++ b/views/index.html
@@ -1,19 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Microblog</title>
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <!-- HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://apps.bdimg.com/libs/html5shiv/r29/html5.min.js"></script>
-    <![endif]-->
-    <!-- styles -->
-    <link href="css/style.css" rel="stylesheet">
+<% include header.html%>
 
-</head>
-<body>
-       <%= title %>
-</body>
-</html>
+	<% if(user && !user.userId){ %>
+	<div class="panel">
+		<h2>欢迎来到 Microblog</h2>
+		<p>Microblog 是一个基于 Node.js 的微博系统。</p>
+		<div class="action">
+			<a href="/login">登录</a>
+			<a href="/register">立即注册</a>
+		</div>
+	</div>
+
+	<% }else { %>
+
+	<% include publish.html%>
+
+	<%}%>
+	
+	<% include items.html%>
+
+<% include footer.html%>
