--- a/views/footer.html
+++ b/views/footer.html
@@ -1,6 +1,8 @@
 <div class="footer">
     <span>BYGPD 2017</span>
 </div>
+<script type="text/javascript" src="https://cdn.bootcss.com/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/common.js"></script>
 </body>
 
 </html>
