--- a/views/index.html
+++ b/views/index.html
@@ -1,6 +1,6 @@
 <% include header.html%>
 
-	<% if(user && !user.userId){ %>
+	<% if(user && !user.name){ %>
 	<div class="panel">
 		<h2>欢迎来到 Microblog</h2>
 		<p>Microblog 是一个基于 Node.js 的微博系统。</p>
