--- a/views/register.html
+++ b/views/register.html
@@ -1,6 +1,7 @@
 <% include header.html%>
-    <div class="error">
-        <span class="message"></span>
+    <div class="message">
+        <span class="info">注册成功！</span>
+        <span class="error"></span>
     </div>
     <div class="form-wrapper">
         <h3>用户注册</h3>
@@ -17,7 +18,7 @@
             <input type="password" name="passwordConfirm" id="passwordConfirm" />
         </div>
         <div class="actions">
-            <button class="btn">注册</button>
+            <button class="btn btn-register">注册</button>
         </div>
     </div>
     <% include footer.html%>
