--- a/views/user.html
+++ b/views/user.html
@@ -1,7 +1,7 @@
 <% include header.html%>
 
-	<% if(user && !user.userId){ %>
-	
+	<% if(user && !user.name){ %>
+
 	<% include publish.html%>
 
 	<%}%>
