--- a/public/css/style.css
+++ b/public/css/style.css
@@ -135,13 +135,13 @@ div.message{
 	border-radius: 4px;
 }
 div.message .error{
-	display: block;
+	display: none;
 	margin:20px;
 	font-size: 14px;
 	color:red;
 }
 div.message .info{
-	display: block;
+	display: none;
 	margin:20px;
 	font-size: 14px;
 	color:green;
