--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,7 @@
 <% include header.html%>
 
     <div class="message">
-    	<span class="info"></span>
+    	<span class="info">登录成功！</span>
         <span class="error"></span>
     </div>
     <div class="form-wrapper">
@@ -15,7 +15,7 @@
             <input type="password" name="password" id="password" />
         </div>
         <div class="actions">
-        	<button class="btn">登入</button>
+        	<button class="btn btn-login">登入</button>
         </div>
     </div>
 
