finish first tag

--- a/views/publish.html
+++ b/views/publish.html
@@ -1,6 +1,10 @@
+ <div class="message">
+    	<span class="info">登录成功！</span>
+        <span class="error"></span>
+    </div>
 <div class="publish">
-    <textarea name="content"></textarea>
+    <textarea name="content" id="publish-content"></textarea>
     <div class="actions">
-        <button class="btn">发表</button>
+        <button class="btn btn-publish">发表</button>
     </div>
 </div>
