--- a/views/header.html
+++ b/views/header.html
@@ -10,7 +10,7 @@
       <script src="http://apps.bdimg.com/libs/html5shiv/r29/html5.min.js"></script>
     <![endif]-->
     <!-- styles -->
-    <link href="css/style.css" rel="stylesheet">
+    <link href="/css/style.css" rel="stylesheet">
 
 </head>
 <body>
@@ -22,7 +22,7 @@
 		<a href="/login">登入</a>
 		<a href="/register">注册</a>
 	<% }else { %>
-		<a href="/user/<%= user.name %>"><%=user.name%></a>
+		<a class="user-link" href="/user/<%= user.name %>"><%=user.name%></a>
 		<a href="/logout">登出</a>
 	<% } %>
 </div>
